--- a/.github/workflows/customer.yml
+++ b/.github/workflows/customer.yml
@@ -14,13 +14,13 @@ env:
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
-  build-and-push-image:
+  build-and-push-image-consumer:
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
       contents: read
       packages: write
-      attestations: write
+      id-token: write
       # 
     steps:
       - name: Checkout repository
