--- a/.github/workflows/provider.yml
+++ b/.github/workflows/provider.yml
@@ -1,5 +1,5 @@
 #
-name: Create and publish a Docker image
+name: Create and publish a provider image
 
 # Configures this workflow to run every time a change is pushed to the branch called `release`.
 on:
@@ -21,7 +21,7 @@ jobs:
       contents: read
       packages: write
       id-token: write
-      # 
+      attestations: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
