--- a/src/frontend/international-dataspace-station/package.json
+++ b/src/frontend/international-dataspace-station/package.json
@@ -12,17 +12,18 @@
     "@heroicons/react": "^2.1.3",
     "clsx": "^2.1.1",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18",
+    "sass": "^1.77.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.12.13",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
