--- a/src/resources/configuration/tax_advisor-configuration.properties
+++ b/src/resources/configuration/tax_advisor-configuration.properties
@@ -1,4 +1,4 @@
-edc.participant.id=consumer
+edc.participant.id=tax_advisor
 edc.dsp.callback.address=http://localhost:29194/protocol
 web.http.port=29191
 web.http.path=/api
