--- a/src/resources/configuration/company-configuration.properties
+++ b/src/resources/configuration/company-configuration.properties
@@ -1,4 +1,4 @@
-edc.participant.id=provider
+edc.participant.id=company
 edc.dsp.callback.address=http://localhost:19194/protocol
 web.http.port=19191
 web.http.path=/api
