Updated dependencies and changed project structure

--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -4,8 +4,8 @@ format.version = "1.1"
 [versions]
 assertj = "3.25.3"
 awaitility = "4.2.1"
-edc = "0.3.1"
-ext-edc = "0.3.1"
+edc = "0.4.1"
+identity-hub = "0.3.1"
 jakarta-json = "2.0.1"
 junit-pioneer = "2.2.0"
 jupiter = "5.10.2"
@@ -31,6 +31,7 @@ edc-control-plane-core = { module = "org.eclipse.edc:control-plane-core", versio
 edc-control-plane-spi = { module = "org.eclipse.edc:control-plane-spi", version.ref = "edc" }
 edc-data-plane-control-api = { module = "org.eclipse.edc:data-plane-control-api", version.ref = "edc" }
 edc-data-plane-public-api = { module = "org.eclipse.edc:data-plane-public-api", version.ref = "edc" }
+edc-data-plane-api = { module = "org.eclipse.edc:data-plane-api", version.ref = "edc" }
 edc-data-plane-aws-s3 = { module = "org.eclipse.edc:data-plane-aws-s3", version.ref = "edc" }
 edc-data-plane-azure-storage = { module = "org.eclipse.edc:data-plane-azure-storage", version.ref = "edc" }
 edc-data-plane-client = { module = "org.eclipse.edc:data-plane-client", version.ref = "edc" }
@@ -38,6 +39,7 @@ edc-data-plane-core = { module = "org.eclipse.edc:data-plane-core", version.ref 
 edc-data-plane-http = { module = "org.eclipse.edc:data-plane-http", version.ref = "edc" }
 edc-data-plane-kafka = { module = "org.eclipse.edc:data-plane-kafka", version.ref = "edc" }
 edc-data-plane-selector-api = { module = "org.eclipse.edc:data-plane-selector-api", version.ref = "edc" }
+edc-data-plane-selector-client = { module = "org.eclipse.edc:data-plane-selector-client", version.ref = "edc" }
 edc-data-plane-selector-core = { module = "org.eclipse.edc:data-plane-selector-core", version.ref = "edc" }
 edc-data-plane-spi = { module = "org.eclipse.edc:data-plane-spi", version.ref = "edc" }
 edc-data-plane-util = { module = "org.eclipse.edc:data-plane-util", version.ref = "edc" }
@@ -62,9 +64,9 @@ edc-transfer-pull-http-dynamic-receiver = { module = "org.eclipse.edc:transfer-p
 edc-util = { module = "org.eclipse.edc:util", version.ref = "edc" }
 edc-vault-azure = { module = "org.eclipse.edc:vault-azure", version.ref = "edc" }
 edc-vault-filesystem = { module = "org.eclipse.edc:vault-filesystem", version.ref = "edc" }
-edc-ext-identity-did-core = { module = "org.eclipse.edc:identity-did-core", version.ref = "ext-edc" }
-edc-ext-identity-did-service = { module = "org.eclipse.edc:identity-did-service", version.ref = "ext-edc" }
-edc-ext-identity-did-web = { module = "org.eclipse.edc:identity-did-web", version.ref = "ext-edc" }
+edc-ext-identity-did-core = { module = "org.eclipse.edc:identity-did-core", version.ref = "edc" }
+edc-ext-identity-did-service = { module = "org.eclipse.edc:identity-did-service", version.ref = "edc" }
+edc-ext-identity-did-web = { module = "org.eclipse.edc:identity-did-web", version.ref = "edc" }
 edc-ext-http = { module = "org.eclipse.edc:http", version.ref = "edc" }
 edc-ext-api-management = { module = "org.eclipse.edc:management-api", version.ref = "edc" }
 edc-ext-api-management-config = { module = "org.eclipse.edc:management-api-configuration", version.ref = "edc" }
@@ -78,20 +80,20 @@ edc-ext-dpf-selector-client = { module = "org.eclipse.edc:data-plane-selector-cl
 edc-ext-dpf-selector-api = { module = "org.eclipse.edc:data-plane-selector-api", version.ref = "edc" }
 edc-ext-transfer-dpf = { module = "org.eclipse.edc:transfer-data-plane", version.ref = "edc" }
 #
-ih-spi-core = { module = "org.eclipse.edc:identity-hub-spi", version.ref = "ext-edc" }
-ih-core = { module = "org.eclipse.edc:identity-hub", version.ref = "ext-edc" }
-ih-core-client = { module = "org.eclipse.edc:identity-hub-client", version.ref = "ext-edc" }
-ih-core-verifier = { module = "org.eclipse.edc:identity-hub-credentials-verifier", version.ref = "ext-edc" }
-ih-ext-api = { module = "org.eclipse.edc:identity-hub-api", version.ref = "ext-edc" }
-ih-ext-verifier-jwt = { module = "org.eclipse.edc:identity-hub-verifier-jwt", version.ref = "ext-edc" }
-ih-ext-credentials-jwt = { module = "org.eclipse.edc:identity-hub-credentials-jwt", version.ref = "ext-edc" }
-ih-ext-api-selfdescription = { module = "org.eclipse.edc:self-description-api", version.ref = "ext-edc" }
+ih-spi-core = { module = "org.eclipse.edc:identity-hub-spi", version.ref = "identity-hub" }
+ih-core = { module = "org.eclipse.edc:identity-hub", version.ref = "identity-hub" }
+ih-core-client = { module = "org.eclipse.edc:identity-hub-client", version.ref = "identity-hub" }
+ih-core-verifier = { module = "org.eclipse.edc:identity-hub-credentials-verifier", version.ref = "identity-hub" }
+ih-ext-api = { module = "org.eclipse.edc:identity-hub-api", version.ref = "identity-hub" }
+ih-ext-verifier-jwt = { module = "org.eclipse.edc:identity-hub-verifier-jwt", version.ref = "identity-hub" }
+ih-ext-credentials-jwt = { module = "org.eclipse.edc:identity-hub-credentials-jwt", version.ref = "identity-hub" }
+ih-ext-api-selfdescription = { module = "org.eclipse.edc:self-description-api", version.ref = "identity-hub" }
 #
-rs-spi-core = { module = "org.eclipse.edc:registration-service-spi", version.ref = "ext-edc" }
-rs-core = { module = "org.eclipse.edc:registration-service", version.ref = "ext-edc" }
-rs-core-credential-service = { module = "org.eclipse.edc:registration-service-credential-service", version.ref = "ext-edc" }
-rs-core-client = { module = "org.eclipse.edc:registration-service-client", version.ref = "ext-edc" }
-rs-ext-api = { module = "org.eclipse.edc:registration-service-api", version.ref = "ext-edc" }
+rs-spi-core = { module = "org.eclipse.edc:registration-service-spi", version.ref = "edc" }
+rs-core = { module = "org.eclipse.edc:registration-service", version.ref = "edc" }
+rs-core-credential-service = { module = "org.eclipse.edc:registration-service-credential-service", version.ref = "edc" }
+rs-core-client = { module = "org.eclipse.edc:registration-service-client", version.ref = "edc" }
+rs-ext-api = { module = "org.eclipse.edc:registration-service-api", version.ref = "edc" }
 #
 jakarta-rsApi = { module = "jakarta.ws.rs:jakarta.ws.rs-api", version.ref = "rsApi" }
 jakartaJson = { module = "org.glassfish:jakarta.json", version.ref = "jakarta-json" }
