--- a/src/system-tests/docker-compose.yml
+++ b/src/system-tests/docker-compose.yml
@@ -1,10 +1,142 @@
 version: "3.9"
 services:
 
+  taxadvisor:
+    container_name: taxadvisor
+    build:
+      context: ../launchers/connector
+      args:
+        JVM_ARGS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+    environment:
+      EDC_DSP_CALLBACK_ADDRESS: http://taxadvisor:8282/api/dsp
+      EDC_CONNECTOR_NAME: taxadvisor
+      EDC_PARTICIPANT_ID: did:web:did-server:taxadvisor
+
+      EDC_BLOBSTORE_ENDPOINT_TEMPLATE: "http://azurite:10000/%s"
+      EDC_IDENTITY_DID_URL: did:web:did-server:taxadvisor
+      EDC_VAULT: /resources/vault/taxadvisor/taxadvisor-vault.properties
+      EDC_KEYSTORE: /resources/vault/taxadvisor/taxadvisor-keystore.jks
+      EDC_SELF_DESCRIPTION_DOCUMENT_PATH: /resources/self-description/taxadvisor/sdd.json
+      EDC_KEYSTORE_PASSWORD: test123
+      EDC_API_AUTH_KEY: ApiKeyDefaultValue
+      EDC_IAM_DID_WEB_USE_HTTPS: "false"
+      EDC_CATALOG_CACHE_EXECUTION_DELAY_SECONDS: 5
+      EDC_CATALOG_CACHE_EXECUTION_PERIOD_SECONDS: 5
+      EDC_CATALOG_CACHE_PARTITION_NUM_CRAWLERS: 5
+      EDC_DATAPLANE_TOKEN_VALIDATION_ENDPOINT: http://taxadvisor:8383/api/control/token
+      REGISTRATION_SERVICE_API_URL: http://registration-service:8184/api/authority
+      EDC_WEB_REST_CORS_ENABLED: "true"
+      EDC_WEB_REST_CORS_HEADERS: "origin,content-type,accept,authorization,x-api-key"
+    depends_on:
+      - did-server
+      - azurite
+      - registration-service
+    ports:
+      - "9191:9191"
+      - "8181:8181"
+      - "5005:5005"
+      - "7171:7171"
+    volumes:
+      - ./resources:/resources
+
+  company:
+    container_name: company
+    build:
+      context: ../launchers/connector
+      args:
+        JVM_ARGS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006"
+    environment:
+      EDC_DSP_CALLBACK_ADDRESS: http://company:8282/api/dsp
+      EDC_CONNECTOR_NAME: company
+      EDC_PARTICIPANT_ID: did:web:did-server:company
+
+      EDC_BLOBSTORE_ENDPOINT_TEMPLATE: "http://azurite:10000/%s"
+      EDC_IDENTITY_DID_URL: did:web:did-server:company
+      EDC_VAULT: /resources/vault/company/company-vault.properties
+      EDC_KEYSTORE: /resources/vault/company/company-keystore.jks
+      EDC_SELF_DESCRIPTION_DOCUMENT_PATH: /resources/self-description/company/sdd.json
+      EDC_KEYSTORE_PASSWORD: test123
+      EDC_API_AUTH_KEY: ApiKeyDefaultValue
+      EDC_IAM_DID_WEB_USE_HTTPS: "false"
+      EDC_CATALOG_CACHE_EXECUTION_DELAY_SECONDS: 5
+      EDC_CATALOG_CACHE_EXECUTION_PERIOD_SECONDS: 5
+      EDC_CATALOG_CACHE_PARTITION_NUM_CRAWLERS: 5
+      EDC_DATAPLANE_TOKEN_VALIDATION_ENDPOINT: http://company:8383/api/control/token
+      REGISTRATION_SERVICE_API_URL: http://registration-service:8184/api/authority
+      EDC_WEB_REST_CORS_ENABLED: "true"
+      EDC_WEB_REST_CORS_HEADERS: "origin,content-type,accept,authorization,x-api-key"
+    depends_on:
+      - did-server
+      - azurite
+      - registration-service
+    ports:
+      - "9192:9191"
+      - "8182:8181"
+      - "5006:5006"
+      - "7172:7171"
+    volumes:
+      - ./resources:/resources
+
+  bank:
+    container_name: bank
+    build:
+      context: ../launchers/connector
+      args:
+        JVM_ARGS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5007"
+    environment:
+      EDC_DSP_CALLBACK_ADDRESS: http://bank:8282/api/dsp
+      EDC_CONNECTOR_NAME: bank
+      EDC_PARTICIPANT_ID: did:web:did-server:bank
+
+      EDC_BLOBSTORE_ENDPOINT_TEMPLATE: "http://azurite:10000/%s"
+      EDC_IDENTITY_DID_URL: did:web:did-server:bank
+      EDC_VAULT: /resources/vault/bank/bank-vault.properties
+      EDC_KEYSTORE: /resources/vault/bank/bank-keystore.jks
+      EDC_SELF_DESCRIPTION_DOCUMENT_PATH: /resources/self-description/bank/sdd.json
+      EDC_KEYSTORE_PASSWORD: test123
+      EDC_API_AUTH_KEY: ApiKeyDefaultValue
+      EDC_IAM_DID_WEB_USE_HTTPS: "false"
+      EDC_CATALOG_CACHE_EXECUTION_DELAY_SECONDS: 5
+      EDC_CATALOG_CACHE_EXECUTION_PERIOD_SECONDS: 5
+      EDC_CATALOG_CACHE_PARTITION_NUM_CRAWLERS: 5
+      EDC_DATAPLANE_TOKEN_VALIDATION_ENDPOINT: http://bank:8383/api/control/token
+      REGISTRATION_SERVICE_API_URL: http://registration-service:8184/api/authority
+      EDC_WEB_REST_CORS_ENABLED: "true"
+      EDC_WEB_REST_CORS_HEADERS: "origin,content-type,accept,authorization,x-api-key"
+    depends_on:
+      - did-server
+      - azurite
+      - registration-service
+    ports:
+      - "9193:9191"
+      - "8183:8181"
+      - "5007:5007"
+      - "7173:7171"
+    volumes:
+      - ./resources:/resources
+
+# A nginx based HTTP server to serve dataspace participants DIDs.
+  did-server:
+    container_name: did-server
+    image: nginx
+    volumes:
+      - ./resources/webdid:/usr/share/nginx/html
+    ports:
+      - "7070:80"
+
+  # Azure blob storage simulator.
+  azurite:
+    container_name: azurite
+    image: mcr.microsoft.com/azure-storage/azurite
+    ports:
+      - 10000:10000
+    environment:
+      AZURITE_ACCOUNTS: taxadvisorassets:key1;companyassets:key2;bankassets:key3
+
   registration-service:
     container_name: registration-service
     build:
-      context: ../registrationservice
+      context: ../launchers/registrationservice
       args:
         JVM_ARGS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008"
     environment:
