--- a/.github/workflows/bank.yml
+++ b/.github/workflows/bank.yml
@@ -1,5 +1,5 @@
 #
-name: Create and publish a tax advisor image
+name: Create and publish a bank image
 
 # Configures this workflow to run every time a change is pushed to the branch called release.
 on:
