--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -1,5 +1,5 @@
 #
-name: Create and publish a provider image
+name: Create and publish a company image
 
 # Configures this workflow to run every time a change is pushed to the branch called release.
 on:
