--- a/src/frontend_socket/international-dataspace-station/package.json
+++ b/src/frontend_socket/international-dataspace-station/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "express": "^4.19.2",
+    "js-cookie": "^3.0.5",
+    "net": "^1.0.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
