Bug fix: issue #47

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "39193:39193"
 
   app:
-    working_dir: /home/node/app
+    working_dir: /amos
     build: 
       dockerfile: frontend_socket/international-dataspace-station/app.Dockerfile
     ports:
