--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,8 @@ bin/
 
 # Frontend
 package-lock.json
+src/frontend_socket/international-dataspace-station/.next
+src/frontend_socket/international-dataspace-station/node_modules
+src/build
+src/.gradle
 
