--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -37,7 +37,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-company
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-company_connector
           tags: |
             type=schedule
             type=ref,event=branch
@@ -46,7 +46,7 @@ jobs:
       # Change directory and copy Dockerfile
       - name: Change directory and copy Dockerfile
         working-directory: ./src
-        run: cp company.Dockerfile Dockerfile
+        run: cp company_connector.Dockerfile Dockerfile
       # This step uses the docker/build-push-action action to build the image, based on your repository's Dockerfile. If the build succeeds, it pushes the image to GitHub Packages.
       # It uses the context parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the docker/build-push-action repository.
       # It uses the tags and labels parameters to tag and label the image with the output from the "meta" step.
@@ -63,6 +63,6 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}-company
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}-company_connector
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
