Dynamic connector api control in frontend

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,26 +1,38 @@
 version: '3.4'
 
 services:
-  company_connector:
+  company:
     working_dir: /amos
     build: 
       dockerfile: company_connector.Dockerfile
     ports:
+      - "19191:19191"
+      - "19192:19192"
       - "19193:19193"
+      - "19194:19194"
+      - "19291:19291"
 
-  tax_advisor_connector:
+  taxadvisor:
     working_dir: /amos
     build: 
       dockerfile: tax_advisor_connector.Dockerfile
     ports:
-      - "29193:29193"
+      - "29191:19191"
+      - "29192:19192"
+      - "29193:19193"
+      - "29194:19194"
+      - "29291:19291"
 
-  bank_connector:
+  bank:
     working_dir: /amos
     build: 
       dockerfile: bank_connector.Dockerfile
     ports:
-      - "39193:39193"
+      - "39191:19191"
+      - "39192:19192"
+      - "39193:19193"
+      - "39194:19194"
+      - "39291:19291"
 
   company_frontend:
     working_dir: /amos
