--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,43 +2,40 @@ version: '3.4'
 
 services:
   company_connector:
-    working_dir: /amos
     build: 
       dockerfile: company_connector.Dockerfile
     ports:
       - "19193:19193"
 
   tax_advisor_connector:
-    working_dir: /amos
     build: 
       dockerfile: tax_advisor_connector.Dockerfile
     ports:
       - "29193:29193"
 
   bank_connector:
-    working_dir: /amos
     build: 
       dockerfile: bank_connector.Dockerfile
     ports:
       - "39193:39193"
 
   company_frontend:
-    working_dir: /amos
     build:
-      dockerfile: frontend_socket/international-dataspace-station/company_frontend.Dockerfile
+      context: frontend_socket/international-dataspace-station
+      dockerfile: company_frontend.Dockerfile
     ports:
-      - "3001:3001"
+      - "3001:3000"
 
   tax_advisor_frontend:
-    working_dir: /amos
     build:
-      dockerfile: frontend_socket/international-dataspace-station/tax_advisor_frontend.Dockerfile
+      context: frontend_socket/international-dataspace-station
+      dockerfile: tax_advisor_frontend.Dockerfile
     ports:
-      - "3002:3002"
+      - "3002:3000"
 
   bank_frontend:
-    working_dir: /amos
     build:
-      dockerfile: frontend_socket/international-dataspace-station/bank_frontend.Dockerfile
+      context: frontend_socket/international-dataspace-station
+      dockerfile: bank_frontend.Dockerfile
     ports:
-      - "3003:3003"
+      - "3003:3000"
