--- a/src/frontend_socket/international-dataspace-station/package.json
+++ b/src/frontend_socket/international-dataspace-station/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "proxy": "http://localhost:39193",
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.2",
