--- a/.github/workflows/tax_advisor.yml
+++ b/.github/workflows/tax_advisor.yml
@@ -110,6 +110,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
+          build-args: |
+            RUNNING_ENV=cloud
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
