Naming connectors and restructuring

--- a/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
@@ -1,3 +1,4 @@
+edc.connector.name=tax_advisor
 edc.participant.id=tax_advisor
 edc.dsp.callback.address=http://localhost:19194/protocol
 web.http.port=19191
