--- a/src/edc-connector/resources/configuration/company-configuration.properties
+++ b/src/edc-connector/resources/configuration/company-configuration.properties
@@ -1,3 +1,4 @@
+edc.connector.name=company
 edc.participant.id=company
 edc.dsp.callback.address=http://localhost:19194/protocol
 web.http.port=19191
