Added database to docker-compose

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -54,3 +54,9 @@ services:
       dockerfile: bank_frontend.Dockerfile
     ports:
       - "3003:3000"
+
+  database:
+    build:
+      context: database
+    ports:
+      - "8080:8080"
