--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       dockerfile: company_frontend.Dockerfile
     ports:
       - "3001:3000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   tax_advisor_frontend:
     build:
@@ -47,6 +49,8 @@ services:
       dockerfile: tax_advisor_frontend.Dockerfile
     ports:
       - "3002:3000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   bank_frontend:
     build:
@@ -54,6 +58,8 @@ services:
       dockerfile: bank_frontend.Dockerfile
     ports:
       - "3003:3000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   database:
     build:
