Added authentication for connector api

--- a/src/edc-connector/resources/configuration/bank-configuration.properties
+++ b/src/edc-connector/resources/configuration/bank-configuration.properties
@@ -1,3 +1,4 @@
+edc.api.auth.key=bank-pass
 edc.connector.name=bank
 edc.participant.id=bank
 edc.dsp.callback.address=http://localhost:19194/protocol
