--- a/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
@@ -1,3 +1,4 @@
+edc.api.auth.key=taxadvisor-pass
 edc.connector.name=tax_advisor
 edc.participant.id=tax_advisor
 edc.dsp.callback.address=http://localhost:19194/protocol
