--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: edc-connector
       dockerfile: company_connector.Dockerfile
+    profiles:
+      - company
     ports:
       - "19191:19191"
       - "19192:19192"
@@ -16,6 +18,8 @@ services:
     build:
       context: edc-connector
       dockerfile: tax_advisor_connector.Dockerfile
+    profiles:
+      - taxadvisor
     ports:
       - "29191:19191"
       - "29192:19192"
@@ -27,6 +31,8 @@ services:
     build:
       context: edc-connector
       dockerfile: bank_connector.Dockerfile
+    profiles:
+      - bank
     ports:
       - "39191:19191"
       - "39192:19192"
@@ -34,35 +40,62 @@ services:
       - "39194:19194"
       - "39291:19291"
 
-  company_frontend:
+  company-frontend:
     build:
       context: frontend
       dockerfile: company_frontend.Dockerfile
+    profiles:
+      - company
     ports:
       - "3001:3000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
-  tax_advisor_frontend:
+  taxadvisor-frontend:
     build:
       context: frontend
       dockerfile: tax_advisor_frontend.Dockerfile
+    profiles:
+      - taxadvisor
     ports:
       - "3002:3000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
-  bank_frontend:
+  bank-frontend:
     build:
       context: frontend
       dockerfile: bank_frontend.Dockerfile
+    profiles:
+      - bank
     ports:
       - "3003:3000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
-  database:
+  company-database:
     build:
       context: database
+      dockerfile: company_database.Dockerfile
+    profiles:
+      - company
     ports:
-      - "8080:8080"
+      - "8081:8080"
+
+  taxadvisor-database:
+    build:
+      context: database
+      dockerfile: taxadvisor_database.Dockerfile
+    profiles:
+      - taxadvisor
+    ports:
+      - "8082:8080"
+
+  bank-database:
+    build:
+      context: database
+      dockerfile: bank_database.Dockerfile
+    profiles:
+      - bank
+    ports:
+      - "8083:8080"
