--- a/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
@@ -2,7 +2,7 @@ edc.connector.name=tax_advisor
 edc.participant.id=tax_advisor
 edc.dsp.callback.address=http://localhost:19194/protocol
 web.http.port=19191
-web.http.path=/api
+web.http.path=/connector-api
 web.http.management.port=19193
 web.http.management.path=/management
 web.http.protocol.port=19194
