--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: company_connector.Dockerfile
     profiles:
       - company
+      - complete
     ports:
       - "19191:19191"
       - "19192:19192"
@@ -20,6 +21,7 @@ services:
       dockerfile: tax_advisor_connector.Dockerfile
     profiles:
       - taxadvisor
+      - complete
     ports:
       - "29191:19191"
       - "29192:19192"
@@ -33,6 +35,7 @@ services:
       dockerfile: bank_connector.Dockerfile
     profiles:
       - bank
+      - complete
     ports:
       - "39191:19191"
       - "39192:19192"
@@ -46,6 +49,7 @@ services:
       dockerfile: company_frontend.Dockerfile
     profiles:
       - company
+      - complete
     ports:
       - "3001:3000"
     volumes:
@@ -57,6 +61,7 @@ services:
       dockerfile: tax_advisor_frontend.Dockerfile
     profiles:
       - taxadvisor
+      - complete
     ports:
       - "3002:3000"
     volumes:
@@ -68,6 +73,7 @@ services:
       dockerfile: bank_frontend.Dockerfile
     profiles:
       - bank
+      - complete
     ports:
       - "3003:3000"
     volumes:
@@ -79,6 +85,7 @@ services:
       dockerfile: company_database.Dockerfile
     profiles:
       - company
+      - complete
     ports:
       - "8081:8080"
 
@@ -88,6 +95,7 @@ services:
       dockerfile: taxadvisor_database.Dockerfile
     profiles:
       - taxadvisor
+      - complete
     ports:
       - "8082:8080"
 
@@ -97,5 +105,6 @@ services:
       dockerfile: bank_database.Dockerfile
     profiles:
       - bank
+      - complete
     ports:
       - "8083:8080"
