--- a/src/database/src/main/resources/application.properties
+++ b/src/database/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.servlet.multipart.max-file-size=11MB
+spring.servlet.multipart.max-request-size=11MB
