--- a/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
+++ b/src/edc-connector/resources/configuration/tax_advisor-configuration.properties
@@ -18,3 +18,6 @@ web.http.public.path=/public
 web.http.control.port=19192
 web.http.control.path=/control
 edc.dataplane.token.validation.endpoint=http://localhost:19192/control/token
+edc.keystore=resources/certs/cert.pfx
+edc.keystore.password=123456
+
